--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10829,6 +10829,12 @@ body {
   font-family: "Product Sans", "Open Sans", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-animation: fadeInAnimation ease 800ms;
+          animation: fadeInAnimation ease 800ms;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 body::-webkit-scrollbar {
@@ -10854,7 +10860,8 @@ p {
   margin: 0;
 }
 
-input[type], textarea[name] {
+input[type],
+textarea[name] {
   padding: 2.5vmin 2vmin;
   background-color: #1a1b1e;
   border-width: 0.3vmin;
@@ -10865,14 +10872,35 @@ input[type], textarea[name] {
   transition: background-color 250ms ease-out;
 }
 
-input[type]:focus, textarea[name]:focus, textarea[name]:valid {
+input[type]:focus,
+textarea[name]:focus,
+textarea[name]:valid {
   background-color: #bbbbbb;
   border-color: #246bfe;
   color: black;
 }
 
-input[type]:valid, textarea[name]:valid {
+input[type]:valid,
+textarea[name]:valid {
   border-color: #00bf8f;
+}
+
+@-webkit-keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .content-seperator {
@@ -11068,9 +11096,9 @@ input[type]:valid, textarea[name]:valid {
 
 .skills__card:hover,
 .skills__card:focus {
+  border-top: 1vmin solid #246bfe;
   -webkit-box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
           box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
-  border-top: 1vmin solid #246bfe;
   -webkit-transform: translate(0, -1vmin);
           transform: translate(0, -1vmin);
 }
@@ -11220,15 +11248,15 @@ input[type]:valid, textarea[name]:valid {
   background: #2d2e32;
   -webkit-box-shadow: 0 0 6px 0 rgba(32, 32, 36, 0.12);
           box-shadow: 0 0 6px 0 rgba(32, 32, 36, 0.12);
-  -webkit-transition: all .35s ease;
-  transition: all .35s ease;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
   position: relative;
   border-radius: 1vmin;
   border-top: 1vmin solid black;
 }
 
 .accordion-item::before {
-  content: '';
+  content: "";
   position: absolute;
   width: calc(0.8vw + 0.8vh);
   height: calc(0.8vw + 0.8vh);
@@ -11362,7 +11390,7 @@ input[type]:valid, textarea[name]:valid {
 }
 
 .project_container_img .project_img_overlay .project_counter {
-  background-color: black;
+  background-color: #393e46;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11433,7 +11461,7 @@ input[type]:valid, textarea[name]:valid {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: black;
+  background-color: #393e46;
 }
 
 .project_container_desc .project_desc_chips {
@@ -11486,9 +11514,12 @@ input[type]:valid, textarea[name]:valid {
           filter: brightness(100%);
 }
 
-.project:hover .project_case_study {
-  animation: slide-in 300ms forwards;
-  -webkit-animation: slide-in 300ms forwards;
+.project:hover {
+  border-color: #246bfe;
+  -webkit-box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+          box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+  -webkit-transform: translate(0, -1vmin);
+          transform: translate(0, -1vmin);
 }
 
 #smartsevak {
@@ -11496,13 +11527,13 @@ input[type]:valid, textarea[name]:valid {
 }
 
 #pikapika {
-  background: -webkit-gradient(linear, left top, right top, from(#FFB22A), to(#FF685E));
-  background: linear-gradient(to right, #FFB22A, #FF685E);
+  background: -webkit-gradient(linear, left top, right top, from(#ffb22a), to(#ff685e));
+  background: linear-gradient(to right, #ffb22a, #ff685e);
 }
 
 #eklavya {
-  background: -webkit-gradient(linear, left top, right top, from(#4BBFAA), to(#BBCD61));
-  background: linear-gradient(to right, #4BBFAA, #BBCD61);
+  background: -webkit-gradient(linear, left top, right top, from(#4bbfaa), to(#bbcd61));
+  background: linear-gradient(to right, #4bbfaa, #bbcd61);
 }
 
 #wallset {
@@ -11510,12 +11541,12 @@ input[type]:valid, textarea[name]:valid {
 }
 
 #mentorship {
-  background-color: #8C2165;
+  background-color: #8c2165;
 }
 
 #mlnavigation {
-  background: -webkit-gradient(linear, left top, right top, from(#4776E6), to(#8E54E9));
-  background: linear-gradient(to right, #4776E6, #8E54E9);
+  background: -webkit-gradient(linear, left top, right top, from(#4776e6), to(#8e54e9));
+  background: linear-gradient(to right, #4776e6, #8e54e9);
 }
 
 #inn91 {
@@ -11569,6 +11600,7 @@ input[type]:valid, textarea[name]:valid {
   .project {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
+    border-left: 1vmin solid black;
   }
   .project_container_img {
     padding-left: 4vmin;
@@ -11585,6 +11617,7 @@ input[type]:valid, textarea[name]:valid {
   .project {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
+    border-top: 1vmin solid black;
   }
   .project_container_img {
     padding-left: 4vmin;
@@ -11925,7 +11958,14 @@ footer {
   margin-top: 4vmin;
 }
 
-p, h1, h2, h3, h4, h5, h6, label {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label {
   filter: brightness(80%);
   -webkit-filter: brightness(80%);
   -moz-filter: brightness(80%);
@@ -11942,10 +11982,12 @@ img {
 }
 
 @media (max-width: 1024px) {
-  p, label {
+  p,
+  label {
     font-size: clamp(13px, calc(1.15vw + 1.15vh), 32px);
   }
-  input[type="text"], input[type="email"] {
+  input[type="text"],
+  input[type="email"] {
     font-size: clamp(13px, calc(1.15vw + 1.15vh), 32px);
   }
   textarea[name="message"] {
@@ -11960,10 +12002,12 @@ img {
 }
 
 @media (min-width: 1024px) {
-  p, label {
+  p,
+  label {
     font-size: clamp(16px, calc(0.6vw + 0.6vh), 64px);
   }
-  input[type="text"], input[type="email"] {
+  input[type="text"],
+  input[type="email"] {
     font-size: clamp(16px, calc(0.6vw + 0.6vh), 64px);
   }
   textarea[name="message"] {
@@ -12028,7 +12072,7 @@ h6 {
 }
 
 .heavy-bold {
-  font-family: 'Product Sans Black';
+  font-family: "Product Sans Black";
 }
 
 .extra-bold {
@@ -12044,19 +12088,19 @@ h6 {
 }
 
 .regular {
-  font-family: 'Product Sans';
+  font-family: "Product Sans";
 }
 
 .medium {
-  font-family: 'Product Sans Medium';
+  font-family: "Product Sans Medium";
 }
 
 .light {
-  font-family: 'Product Sans Light';
+  font-family: "Product Sans Light";
 }
 
 .thin {
-  font-family: 'Product Sans Thin';
+  font-family: "Product Sans Thin";
 }
 
 .color-primary {
