minor meta value modifications

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -107,6 +107,7 @@ body::-webkit-scrollbar-thumb {
 ul {
   margin: 0;
   padding: 0;
+  list-style: square outside;
 }
 
 p {
@@ -141,11 +142,11 @@ textarea[name]:valid {
 
 @keyframes fadeInAnimation {
   0% {
-      opacity: 0;
+    opacity: 0;
   }
   100% {
-      opacity: 1;
-   }
+    opacity: 1;
+  }
 }
 
 // textarea[name="message"],input[type] {
@@ -1149,6 +1150,12 @@ footer {
 
 #contact__form {
   margin-top: 4vmin;
+}
+
+.ul-interests {
+  padding-left: 2.5em;
+  color: white;
+  margin-bottom: 3vmax;
 }
 
 //------------------------------------------------------------------------------//
