--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10852,6 +10852,7 @@ body::-webkit-scrollbar-thumb {
 ul {
   margin: 0;
   padding: 0;
+  list-style: square outside;
 }
 
 p {
@@ -11956,6 +11957,12 @@ footer {
 
 #contact__form {
   margin-top: 4vmin;
+}
+
+.ul-interests {
+  padding-left: 2.5em;
+  color: white;
+  margin-bottom: 3vmax;
 }
 
 p,
